--- a/style/index.html
+++ b/style/index.html
@@ -3,17 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="stylesheet" href="style.css">
+    
     <title>Netflix Clone</title>
 </head>
 <body>
     <header>
-        <div class=conteiner>
-            <h2>NETFLIX</h2>
+        <div class="container">
+            <h2 class="logo">NETFLIX</h2>
             <nav>
                 <a href="#">Início</a>
                 <a href="#">Séries</a>
                 <a href="#">Filmes</a>
-                <a href="#">Documentários</a>
+                <a href="#">Bombando</a>
+                <a href="#">Minha Lista</a>
             </nav>
         </div>
     </header>
