--- a/style/index.html
+++ b/style/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="container">
-            <h2 class="logo">NETFLIX</h2>
+            <img src='../img/logo.png' class="logo">
             <nav>
                 <a href="#">Início</a>
                 <a href="#">Séries</a>
@@ -21,5 +21,22 @@
             </nav>
         </div>
     </header>
+
+    <main>
+        <div class="filme-principal">
+            <div class="container">
+                <h3 class="titulo">THE CROWN</h3>
+                <p class="descricao">Esta série dramática segue a política, rivalidades e relacionamentos da rainha Elizabeth II, e os eventos que fizeram a história.</p>
+                <div class="botoes">
+                    <button role="button" class="botao">
+                        ASSISTIR AGORA
+                    </button>
+                    <button role="button" class="botao">
+                        MAIS INFORMAÇÕES
+                    </button>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
