--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
+
+    <!-- responsividade -->
+    <link rel="stylesheet" href="style/responsive.css">
 
     <!-- owl css -->
     <link rel="stylesheet" href="owl/owl.carousel.min.css">
@@ -44,9 +47,46 @@
         </div>
     </main>
 
+    <div class="carrosel-filmes">
+        <div class="owl-carousel owl-theme">
+            <div>
+                <img class="box-filme" src="../img/shera.jpg" alt="" srcset="">
+            </div>
+            <div>
+                <img class="box-filme" src="../img/gambito.jpg" alt="" srcset="">
+            </div>
+            <div>
+                <img class="box-filme" src="../img/blacklist.jpg" alt="" srcset="">
+            </div>
+            <div>
+                <img class="box-filme" src="../img/greys.jpg" alt="" srcset="">
+            </div>
+            <div>
+                <img class="box-filme" src="../img/lucifer.jpg" alt="" srcset="">
+            </div>
+            <div>
+                <img class="box-filme" src="../img/queereye.jpg" alt="" srcset="">
+            </div>
+            <div>
+                <img class="box-filme" src="../img/riverdale.jpg" alt="" srcset="">
+            </div>
+            <div>
+                <img class="box-filme" src="../img/simpsons.jpg" alt="" srcset="">
+            </div>
+            <div>
+                <img class="box-filme" src="../img/spongebob.jpg" alt="" srcset="">
+            </div>
+            <div>
+                <img class="box-filme" src="../img/vikings.jpg" alt="" srcset="">
+            </div>
+        </div>
+
+    </div>
+
     <script src="https://kit.fontawesome.com/3a9a4d7146.js" crossorigin="anonymous"></script>
     <script src="../js/owl/jquery.min.js"></script>
     <script src="../js/owl/owl.carousel.min.js"></script>
+    <script src="../js/owl/main.js"></script>
 
 </body>
 </html>
