--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="style/responsive.css">
 
     <!-- owl css -->
-    <link rel="stylesheet" href="owl/owl.carousel.min.css">
-    <link rel="stylesheet" href="owl/owl.theme.default.min.css">
+    <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
     
     <title>Netflix Clone</title>
 </head>
