--- a/index.html
+++ b/index.html
@@ -34,13 +34,15 @@
                 <h3 class="titulo">THE CROWN</h3>
                 <p class="descricao">Esta série dramática segue a política, rivalidades e relacionamentos da rainha Elizabeth II, e os eventos que fizeram a história.</p>
                 <div class="botoes">
-                    <button role="button" class="botao">
+                    <button role="button" class="botao"><a href="https://www.youtube.com/watch?v=OiXEpminPms" target="_blank">
                         <i class="fas fa-play"></i>
                         ASSISTIR AGORA
+                    </a>
                     </button>
-                    <button role="button" class="botao">
+                    <button role="button" class="botao"><a href="https://www.themoviedb.org/tv/65494-the-crown?language=pt-BR" target="_blank">
                         <i class="fas fa-info-circle"></i>
                         MAIS INFORMAÇÕES
+                    </a>
                     </button>
                 </div>
             </div>
@@ -50,34 +52,34 @@
     <div class="carrosel-filmes">
         <div class="owl-carousel owl-theme">
             <div>
-                <img class="box-filme" src="../img/shera.jpg" alt="" srcset="">
+                <a href="https://www.youtube.com/watch?v=GsGMkAWB6lY" target="_blank"><img class="box-filme" src="../img/shera.jpg" alt="" srcset=""></a>
             </div>
             <div>
-                <img class="box-filme" src="../img/gambito.jpg" alt="" srcset="">
+                <a href="https://www.youtube.com/watch?v=cnqV3wsZlpo" target="_blank"><img class="box-filme" src="../img/gambito.jpg" alt="" srcset=""></a>
             </div>
             <div>
-                <img class="box-filme" src="../img/blacklist.jpg" alt="" srcset="">
+                <a href="https://www.youtube.com/watch?v=bB5JnDd9fFw" target="_blank"><img class="box-filme" src="../img/blacklist.jpg" alt="" srcset=""></a>
             </div>
             <div>
-                <img class="box-filme" src="../img/greys.jpg" alt="" srcset="">
+                <a href="https://www.youtube.com/watch?v=LiNIFDZb6BI" target="_blank"><img class="box-filme" src="../img/greys.jpg" alt="" srcset=""></a>
             </div>
             <div>
-                <img class="box-filme" src="../img/lucifer.jpg" alt="" srcset="">
+                <a href="https://www.youtube.com/watch?v=NcnK3C5W7SI" target="_blank"><img class="box-filme" src="../img/lucifer.jpg" alt="" srcset=""></a>
             </div>
             <div>
-                <img class="box-filme" src="../img/queereye.jpg" alt="" srcset="">
+                <a href="https://www.youtube.com/watch?v=yq7gptyu--s" target="_blank"><img class="box-filme" src="../img/queereye.jpg" alt="" srcset=""></a>
             </div>
             <div>
-                <img class="box-filme" src="../img/riverdale.jpg" alt="" srcset="">
+                <a href="https://www.youtube.com/watch?v=G2px382OpYU" target="_blank"><img class="box-filme" src="../img/riverdale.jpg" alt="" srcset=""></a>
             </div>
             <div>
-                <img class="box-filme" src="../img/simpsons.jpg" alt="" srcset="">
+                <a href="https://www.youtube.com/watch?v=5_4SW8HHfUs" target="_blank"><img class="box-filme" src="../img/simpsons.jpg" alt="" srcset=""></a>
             </div>
             <div>
-                <img class="box-filme" src="../img/spongebob.jpg" alt="" srcset="">
+                <a href="https://www.youtube.com/watch?v=LcC-jBJRzXg" target="_blank"><img class="box-filme" src="../img/spongebob.jpg" alt="" srcset=""></a>
             </div>
             <div>
-                <img class="box-filme" src="../img/vikings.jpg" alt="" srcset="">
+                <a href="https://www.youtube.com/watch?v=Y7d0A5re7-0" target="_blank"><img class="box-filme" src="../img/vikings.jpg" alt="" srcset=""></a>
             </div>
         </div>
 
